# code_generator

./: DEVELOPERS.md  README.md  code_generator.py  cpp_generator.py  cpp_generator_tests.py  pyproject.toml  requirements-dev.txt  test_cpp_generator.py
.github/workflows/: python-app.yml
code_generator/: code_generator.py  cpp_generator.py
code_generator/generators/: cpp.py  cpp2.py
code_generator/test/cpp/: test_array.py  test_array_cpp2.py  test_class.py  test_class_cpp2.py  test_docs.py  test_enum.py  test_enum_cpp2.py  test_function.py  test_function_cpp2.py  test_header.py  test_header_cpp2.py  test_misc.py  test_source.py  test_source_cpp2.py  test_struct.py  test_variable.py  test_variable_cpp2.py
examples/embedded_system/: .gitignore  README.md  config.json  gen.py
examples/embedded_system/i18n/: german.properties
examples/test_cpp_generator/: README.md  test_cpp_generator.py
generators/: cpp.py
test/cpp/: test_array.py  test_class.py  test_cpp_generator.py  test_enum.py  test_function.py  test_misc.py  test_variable.py
tests/: class.cpp  class.h
