[project]
name = "erichschroeter.code_generator"
version = "0.1.2"
authors = [
  { name="Erich Schroeter", email="erich.schroeter+github@gmail.com" },
]
description = "A simple code generator library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/erichschroeter/code_generator"
Issues = "https://github.com/erichschroeter/code_generator/issues"